sandc/test/fixtures/astRegression/shouldSucceed/productions/file/UseStatements.sand
use java.util.List;
use java.util.ArrayList as AL;

pub class UseStatements {
    
}