sandc/test/fixtures/astRegression/shouldFail/productions/identifier/UnescapedReserved.sand
pub class UnescapedReserved {
    use: Foo;
}